--- a/style.css
+++ b/style.css
@@ -351,6 +351,15 @@ header{
         top: -201px !important;
         left: 97% !important;     
     }
+    .header-text h1{
+        font-size: 50px;
+        width: 100%;
+        margin: calc(50vh - 280px) auto;
+   
+       
+        
+        
+    }
     
 }
 /* FEATURES */
